--- a/settings.json
+++ b/settings.json
@@ -1,4 +1,6 @@
 {
-  "guild_id": 123456789101112,
-  "bot_token": "cool_placeholder"
+  "category_id": 1177227021793902602,
+  "guild_id": 1075365992399650836,
+  "client_secret": "na6bVKTb47t69pamKjiBROd3QX-dj-H1",
+  "bot_token": "OTUwNTUxODA2MjEwMDk3MTgy.GVMJiS.RuHN1L2GS7dWQEmoTgaAhXgXq6AURLS-hS4QHM"
 }
